--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,60 @@
 cache/*
+
 figure/*
+Applications/*
+
 Submissions/*
+
 Datasets/*
+DataExample/*
+Spread/*
+SimulationResults/*
+
+
 *.csv
+
 *.rda
+
 *.bbl
+
 *.aux
+
 *.blg
+
 *.sty
+
 *.tag
+
 *.log
+
+*.nav
+*.snm
+*.woff
+*.otf
+*.dvi
+
+*.png
+
 *.pdf
+
+*.PNG
+
+*.toc
+*.out
+*.pper
+*.tikz
+*.rdb
+*.rdx
+*.js
 *.gz
-.Rproj.user
-.Rhistory
-.RData
+
+*.Rproj.user
+
+*__packages
+*tikzDictionary
+*concordance.tex
+*.Rhistory
+
+*.RData*
+
+
